--- a/app/src/main/res/layout/currency_exchange_layout.xml
+++ b/app/src/main/res/layout/currency_exchange_layout.xml
@@ -151,27 +151,7 @@
             app:elevation="2dp"
             app:fabSize="auto" />
 
-        <android.support.v7.widget.CardView
-            android:id="@+id/loading"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:layout_margin="16dp"
-            android:visibility="gone"
-            app:cardCornerRadius="25dp"
-            app:cardElevation="2dp">
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <ProgressBar
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="12dp" />
-            </RelativeLayout>
-        </android.support.v7.widget.CardView>
+        <include layout="@layout/loading_layout" />
     </RelativeLayout>
 
 
