--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/pull_to_refresh_layout"
@@ -13,7 +12,9 @@
             android:id="@+id/list_news"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
-        
+
     </android.support.v4.widget.SwipeRefreshLayout>
 
-</LinearLayout>
+    <include layout="@layout/loading_layout" />
+
+</RelativeLayout>
