--- a/app/src/main/res/layout/fragment_market.xml
+++ b/app/src/main/res/layout/fragment_market.xml
@@ -19,6 +19,126 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
+                <!-- Market Sectoriel Indices -->
+
+                <com.vayetek.financeapp.widgets.QuicksandTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_margin="16dp"
+                    android:text="Sectoral Indices"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="16sp"
+                    app:font="bold" />
+
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                    <android.support.v7.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="35dp"
+                        android:layout_marginLeft="6dp"
+                        android:layout_marginRight="6dp">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="vertical"
+                            android:padding="12dp">
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="40dp"
+                                android:layout_marginTop="6dp"
+                                android:background="@color/colorAccent"
+                                android:orientation="horizontal">
+
+                                <com.vayetek.financeapp.widgets.QuicksandTextView
+                                    android:layout_width="0dp"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="center_vertical"
+                                    android:layout_marginBottom="2dp"
+                                    android:layout_marginTop="2dp"
+                                    android:layout_weight="2"
+                                    android:text="Indice"
+                                    android:textSize="12sp" />
+
+                                <LinearLayout
+                                    android:layout_width="1dp"
+                                    android:layout_height="match_parent"
+                                    android:alpha="0.5"
+                                    android:background="@color/black" />
+
+                                <com.vayetek.financeapp.widgets.QuicksandTextView
+                                    android:layout_width="0dp"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="center_vertical"
+                                    android:layout_weight="1"
+                                    android:gravity="center"
+                                    android:text="Previous Close" />
+
+                                <LinearLayout
+                                    android:layout_width="1dp"
+                                    android:layout_height="match_parent"
+                                    android:alpha="0.5"
+                                    android:background="@color/black" />
+
+                                <com.vayetek.financeapp.widgets.QuicksandTextView
+                                    android:layout_width="0dp"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="center_vertical"
+                                    android:layout_weight="1"
+                                    android:gravity="center"
+                                    android:text="Last Close" />
+
+                                <LinearLayout
+                                    android:layout_width="1dp"
+                                    android:layout_height="match_parent"
+                                    android:alpha="0.5"
+                                    android:background="@color/black" />
+
+                                <com.vayetek.financeapp.widgets.QuicksandTextView
+                                    android:layout_width="0dp"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="center_vertical"
+                                    android:layout_weight="1"
+                                    android:gravity="center"
+                                    android:text="Variation" />
+
+                            </LinearLayout>
+
+                            <android.support.v7.widget.RecyclerView
+                                android:id="@+id/market_sectoral_indices_list"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:layout_marginBottom="4dp" />
+
+                        </LinearLayout>
+
+                    </android.support.v7.widget.CardView>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentBottom="true"
+                        android:layout_alignParentEnd="true"
+                        android:layout_marginEnd="6dp"
+                        android:elevation="4dp"
+                        android:paddingBottom="6dp">
+
+                        <android.support.design.widget.FloatingActionButton
+                            android:id="@+id/voir_all_sectoral_indices"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
+                            android:layout_margin="6dp"
+                            android:src="@drawable/ic_action_more"
+                            app:backgroundTint="@color/white" />
+                    </LinearLayout>
+                </RelativeLayout>
+
+
                 <com.vayetek.financeapp.widgets.QuicksandTextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
