--- a/app/src/main/res/layout/fragment_market.xml
+++ b/app/src/main/res/layout/fragment_market.xml
@@ -19,6 +19,44 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
+                <!-- Market Tunidex Indices -->
+
+                <android.support.v7.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="6dp"
+                    android:layout_marginRight="6dp"
+                    android:layout_marginTop="12dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
+                        android:padding="12dp">
+
+                        <com.vayetek.financeapp.widgets.QuicksandTextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal"
+                            android:text="TuninDex"
+                            android:textColor="@color/colorPrimary"
+                            android:textSize="16sp"
+                            app:font="bold" />
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="180dp">
+
+                            <com.github.mikephil.charting.charts.LineChart
+                                android:id="@+id/chart_tunindex"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent" />
+
+                        </RelativeLayout>
+                    </LinearLayout>
+                </android.support.v7.widget.CardView>
+
+
                 <!-- Market Sectoriel Indices -->
 
                 <com.vayetek.financeapp.widgets.QuicksandTextView
